--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,7 @@
             <artifactId>json</artifactId>
             <version>20160810</version>
         </dependency>
-        <!--json-rest-->
+        <!--json-dfa-rest-->
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-moxy</artifactId>
